# oqd-core

./: README.md  flake.nix  mkdocs.yaml  mkdocs.yml  pyproject.toml  test_atomic_visualization_script.py
docker/: supervisord.conf
docs/: index.md  server.md
docs/explanation/: atomic_interface.md  math_interface.md
docs/tutorials/: small_molecular_system.ipynb
examples/: bosonic_squeezing.ipynb  spin_squeezing.ipynb
pkgs/: derivation.nix
quantumion/backend/: client.py
quantumion/server/: jobqueue.py
quantumion/server/route/: job.py
src/oqd_core/: __init__.py
src/oqd_core/analysis/: isinglike.py
src/oqd_core/backend/: metric.py
src/oqd_core/compiler/analog/passes/: __init__.py  canonicalize.py  ising_analysis.py  ising_types.py
src/oqd_core/compiler/analog/rewrite/: __init__.py  canonicalize.py
src/oqd_core/compiler/atomic/: canonicalize.py  verify.py
src/oqd_core/compiler/math/: passes.py  rules.py
src/oqd_core/interface/: math.py
src/oqd_core/interface/analog/: operator.py
src/oqd_core/interface/atomic/: __init__.py  protocol.py  species.py  system.py
src/oqd_core/visualization/: __init__.py  atomic.py
src/oqd_core/visualizations/: __init__.py  atomic.py
tests/test_analog/: test_ising_analysis.py
tests/test_analysis/: test_isinglike.py
tests/test_atomic/: test_beam.py  test_ion_builder.py
tests/test_math/: test_interface.py  test_passes.py
tests/test_server/: test_registration.py  test_server.py
