[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-core"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = [
  "quantum",
  "computing",
  "analog",
  "digital",
  "compiler",
  "transpilation",
  "atomic",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research ",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Compilers",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pydantic>=2.10.6",
  "oqd-compiler-infrastructure",
  "numpy",
  "scipy",
  "matplotlib>=3.10.5",
]

[project.optional-dependencies]
docs = [
  "pymdown-extensions",
  "mkdocstrings",
  "mkdocs-material",
  "mkdocstrings-python",
  "mdx_truly_sane_lists",
]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_core*"]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[tool.uv.sources]
oqd-compiler-infrastructure = { git = "https://github.com/openquantumdesign/oqd-compiler-infrastructure", rev = "fix_conversion_rule" }

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.1.0",
]


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-core"
Repository = "https://github.com/OpenQuantumDesign/oqd-core.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-core/issues"
